--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
-        content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0">
+        content="width=device-width, initial-scale=1.0,user-scalable=no,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/index.css">
     <title>携程在手，说走就走</title>
+    <script src="js/index.js"></script>
 </head>
 
 <body>
+    <!-- 返回顶部模块 -->
+    <div class="goback"></div>
     <!-- 顶部搜索 -->
     <div class="search-index">
         <div class="search">搜索:目的地/酒店/景点/航班号</div>
@@ -19,7 +22,19 @@
     </div>
     <!-- 焦点图 -->
     <div class="focus">
-        <img src="upload/focus.jpg" alt="">
+        <ul>
+            <li><img src="upload/focus3.jpg" alt=""></li>
+            <li><img src="upload/focus1.jpg" alt=""></li>
+            <li><img src="upload/focus2.jpg" alt=""></li>
+            <li><img src="upload/focus3.jpg" alt=""></li>
+            <li><img src="upload/focus1.jpg" alt=""></li>
+        </ul>
+        <!-- 小圆点 -->
+        <ol>
+            <li class="current"></li>
+            <li></li>
+            <li></li>
+        </ol>
     </div>
     <!-- 局部导航栏 -->
     <ul class="local-nav">
